--- a/index.html
+++ b/index.html
@@ -145,20 +145,50 @@
     <main class="projects">
         <h2>My ShowCase</h2>
         <div class="container">
-            <div class="todo">
+            <div class="password Generator">
+                <img src="assets/projects/password generator.png" alt="">
+                <h3>Password Generator</h3>
+                <p>A Simple App For Generating Password in Choos of Alphabets,Numbers & Special Characters.</p>
+                <div class="badges">
+                    <h5 class="badge">HTML5</h5>
+                    <h5 class="badge">CSS3</h5>
+                    <h5 class="badge">JAVASCRIPT</h5>
+                    <h5 class="badge">RESPONSIVE</h5>
+                </div>
+                <div class="links">
+                    <a href="https://github.com/Yahya-Riswan/Password-Generator" target="_blank" class="github">Github</a>
+                    <a href="Projects/Password Generator/" target="_blank"  class="Live">Live View</a>
+                </div>
+            </div>
+            <div class="ios calculator">
+                <img src="assets/projects/ios calculator.png" alt="">
+                <h3>IOS Caculator</h3>
+                <p>A Simple clone of ios calculator with all functions .</p>
+                <div class="badges">
+                    <h5 class="badge">HTML5</h5>
+                    <h5 class="badge">CSS3</h5>
+                    <h5 class="badge">JAVASCRIPT</h5>
+                    <h5 class="badge">RESPONSIVE</h5>
+                </div>
+                <div class="links">
+                    <a href="https://github.com/Yahya-Riswan/ios_calculator" target="_blank" class="github">Github</a>
+                    <a href="Projects/IOS Calculator/" target="_blank"  class="Live">Live View</a>
+                </div>
+            </div>
+            <div class="weather">
                 <img src="assets/projects/weather.png" alt="">
                 <h3>Weather App</h3>
                 <p>A Weather App With Temperature, Wind Speed , humidity With Openweather API .</p>
                 <div class="badges">
-                    <h5 class="badge">HTML 5</h5>
-                    <h5 class="badge">CSS</h5>
+                    <h5 class="badge">HTML5</h5>
+                    <h5 class="badge">CSS3</h5>
                     <h5 class="badge">JAVASCRIPT</h5>
                     <h5 class="badge">API</h5>
                     <h5 class="badge">RESPONSIVE</h5>
                 </div>
                 <div class="links">
                     <a href="https://github.com/Yahya-Riswan/Weather_app_openweather" target="_blank" class="github">Github</a>
-                    <a href="Projects/Weather/index.html" target="_blank"  class="Live">Live View</a>
+                    <a href="Projects/Weather/" target="_blank"  class="Live">Live View</a>
                 </div>
             </div>
             <div class="todo">
@@ -166,8 +196,8 @@
                 <h3>ToDo App</h3>
                 <p>A simple Todo App That Stores Data In Local Storage</p>
                 <div class="badges">
-                    <h5 class="badge">HTML 5</h5>
-                    <h5 class="badge">CSS</h5>
+                    <h5 class="badge">HTML5</h5>
+                    <h5 class="badge">CSS3</h5>
                     <h5 class="badge">JAVASCRIPT</h5>
                     <h5 class="badge">RESPONSIVE</h5>
                 </div>
@@ -181,8 +211,8 @@
                 <h3>Goibibo Clone</h3>
                 <p>A simple Clone Of Goibibo Without any Functions or Intractions Only Front Page</p>
                 <div class="badges">
-                    <h5 class="badge">HTML 5</h5>
-                    <h5 class="badge">CSS</h5>
+                    <h5 class="badge">HTML5</h5>
+                    <h5 class="badge">CSS3</h5>
                 </div>
                 <div class="links">
                     <a href="https://github.com/Yahya-Riswan/Goibibo-Clone" target="_blank"  class="github">Github</a>
