--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yahya Riswan Pk | Portifolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="media.css">
     <link rel="shortcut icon" href="assets/image.png" type="image/x-icon">
 </head>
@@ -145,10 +145,25 @@
     <main class="projects">
         <h2>My ShowCase</h2>
         <div class="container">
+             <div class="Number game">
+                <img src="assets/projects/numberguessgame.png" alt="">
+                <h3>Number Guess Game</h3>
+                <p>A Game with Dice with Playing with Computer And Player. Try It..</p>
+                <div class="badges">
+                    <h5 class="badge">HTML5</h5>
+                    <h5 class="badge">CSS3</h5>
+                    <h5 class="badge">JAVASCRIPT</h5>
+                    <h5 class="badge">GAME</h5>
+                </div>
+                <div class="links">
+                    <a href="https://github.com/Yahya-Riswan/Number-Guess-Game" target="_blank" class="github">Github</a>
+                    <a href="Projects/Number Guesing Game/" target="_blank"  class="Live">Live View</a>
+                </div>
+            </div>
             <div class="password Generator">
                 <img src="assets/projects/password generator.png" alt="">
                 <h3>Password Generator</h3>
-                <p>A Simple App For Generating Password in Choos of Alphabets,Numbers & Special Characters.</p>
+                <p>A Simple App For Generating Password in Choose of Alphabets,Numbers & Special Characters.</p>
                 <div class="badges">
                     <h5 class="badge">HTML5</h5>
                     <h5 class="badge">CSS3</h5>
@@ -232,8 +247,8 @@
                     <a href="Projects/Elon%20Musk/index.html" target="_blank"  class="Live">Live View</a>
                 </div>
             </div>
-
         </div>
+        <div id="show"><h3>Show More</h3></div>
     </main>
     <main class="skills">
         <h2>Tech I Deploy</h2>
