--- a/index.html
+++ b/index.html
@@ -145,6 +145,21 @@
     <main class="projects">
         <h2>My ShowCase</h2>
         <div class="container">
+            <div class="age Calculator">
+                <img src="assets/projects/age calculator.png" alt="">
+                <h3>Age Calculator</h3>
+                <p>A Simple Age Calculator For Fun...</p>
+                <div class="badges">
+                    <h5 class="badge">HTML5</h5>
+                    <h5 class="badge">CSS3</h5>
+                    <h5 class="badge">JAVASCRIPT</h5>
+                    <h5 class="badge">RESPONSIVE</h5>
+                </div>
+                <div class="links">
+                    <a href="https://github.com/Yahya-Riswan/age_calculator" target="_blank" class="github">Github</a>
+                    <a href="Projects/Age Calculator/" target="_blank"  class="Live">Live View</a>
+                </div>
+            </div>
              <div class="Number game">
                 <img src="assets/projects/numberguessgame.png" alt="">
                 <h3>Number Guess Game</h3>
