--- a/index.html
+++ b/index.html
@@ -145,6 +145,21 @@
     <main class="projects">
         <h2>My ShowCase</h2>
         <div class="container">
+            <div class="p timer">
+                <img src="assets/projects/promodoro timer.png" alt="">
+                <h3>Promodoro Timer</h3>
+                <p> Pomodoro Timer to help users focus with a 25-minute countdown</p>
+                <div class="badges">
+                    <h5 class="badge">HTML5</h5>
+                    <h5 class="badge">CSS3</h5>
+                    <h5 class="badge">JAVASCRIPT</h5>
+                    <h5 class="badge">RESPONSIVE</h5>
+                </div>
+                <div class="links">
+                    <a href="https://github.com/Yahya-Riswan/age_calculator" target="_blank" class="github">Github</a>
+                    <a href="Projects/Pomodoro Timer/" target="_blank"  class="Live">Live View</a>
+                </div>
+            </div>
             <div class="age Calculator">
                 <img src="assets/projects/age calculator.png" alt="">
                 <h3>Age Calculator</h3>
