--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         </div>
     </main>
     <main class="projects">
+        <img src="./" alt="">
         <h2>My ShowCase</h2>
         <div class="container">
             <div class="p timer">
@@ -369,7 +370,37 @@
     <main class="achievments">
         <h2>My Impacts</h2>
         <div class="container">
-            <div class="elonmusk">
+            <div class="Aiforall_appreciate">
+                <img src="assets/Achievments/Yahya Riswan_AI_APPRECIATE_CERTIFICATE.png" alt="">
+                <h3>AI APPRECIATE CERTIFICATE</h3>
+                <p>-By Indian Government & Intel .  I’ve successfully completed the AI Appreciate Program by AI For All!
+A great step forward in understanding how Artificial Intelligence is shaping our world and future.</p>
+                <div class="badges">
+                    <h5 class="badge">AI</h5>
+                    <h5 class="badge">SOCIAL</h5>
+                    <h5 class="badge">NLP</h5>
+                    <h5 class="badge">CV</h5>
+                </div>
+                <div class="links">
+                    <h4>2025</h4>
+                    <a href="assets/Achievments/Yahya Riswan_AI_APPRECIATE_CERTIFICATE.png" target="_blank"  class="Live">View</a>
+                </div>
+            </div>
+            <div class="Aiforall_aware">
+                <img src="assets/Achievments/Yahya Riswan_AI_AWARE_CERTIFICATE.png" alt="">
+                <h3>AI AWARE CERTIFICATE</h3>
+                <p>-By Indian Government & Intel . Completed the AI Aware Program under the AI For All initiative!
+It feels empowering to learn how AI is becoming a part of everyday life and how we all can be responsible users of this technology.</p>
+                <div class="badges">
+                    <h5 class="badge">AI</h5>
+                    <h5 class="badge">SOCIAL</h5>
+                </div>
+                <div class="links">
+                    <h4>2025</h4>
+                    <a href="assets/Achievments/Yahya Riswan_AI_AWARE_CERTIFICATE.png" target="_blank"  class="Live">View</a>
+                </div>
+            </div>
+            <div class="yip">
                 <img src="assets/Achievments/yip%206.0.jpg" alt="">
                 <h3>YIP 6.0 District Winner</h3>
                 <p>I Have Selected To State level Competition In YiP 6.0 For a Ai Power Smart Sunglasses For Visually Impared</p>
