--- a/index.html
+++ b/index.html
@@ -370,17 +370,33 @@
     <main class="achievments">
         <h2>My Impacts</h2>
         <div class="container">
+            <div class="ajs">
+                <img src="assets/Achievments/javascript_intermediate certificate_page-0001.jpg" alt="">
+                <h3>JS INTERMEDIATE CERTIFICATE</h3>
+                <div class="links">
+                    <h4>2025</h4>
+                    <a href="assets/Achievments/javascript_basic certificate_page-0001.jpg" target="_blank"  class="Live">View</a>
+                </div>
+            </div>
+            <div class="bjs">
+                <img src="assets/Achievments/javascript_basic certificate_page-0001.jpg" alt="">
+                <h3>JS BASICS CERTIFICATE</h3>
+                <div class="links">
+                    <h4>2025</h4>
+                    <a href="assets/Achievments/javascript_basic certificate_page-0001.jpg" target="_blank"  class="Live">View</a>
+                </div>
+            </div>
+             <div class="bcss">
+                <img src="assets/Achievments/css certificate_page-0001.jpg" alt="">
+                <h3>CSS BASICS CERTIFICATE</h3>
+                <div class="links">
+                    <h4>2025</h4>
+                    <a href="assets/Achievments/css certificate_page-0001.jpg" target="_blank"  class="Live">View</a>
+                </div>
+            </div>
             <div class="Aiforall_appreciate">
                 <img src="assets/Achievments/Yahya Riswan_AI_APPRECIATE_CERTIFICATE.png" alt="">
                 <h3>AI APPRECIATE CERTIFICATE</h3>
-                <p>-By Indian Government & Intel .  I’ve successfully completed the AI Appreciate Program by AI For All!
-A great step forward in understanding how Artificial Intelligence is shaping our world and future.</p>
-                <div class="badges">
-                    <h5 class="badge">AI</h5>
-                    <h5 class="badge">SOCIAL</h5>
-                    <h5 class="badge">NLP</h5>
-                    <h5 class="badge">CV</h5>
-                </div>
                 <div class="links">
                     <h4>2025</h4>
                     <a href="assets/Achievments/Yahya Riswan_AI_APPRECIATE_CERTIFICATE.png" target="_blank"  class="Live">View</a>
@@ -389,12 +405,6 @@ A great step forward in understanding how Artificial Intelligence is shaping our
             <div class="Aiforall_aware">
                 <img src="assets/Achievments/Yahya Riswan_AI_AWARE_CERTIFICATE.png" alt="">
                 <h3>AI AWARE CERTIFICATE</h3>
-                <p>-By Indian Government & Intel . Completed the AI Aware Program under the AI For All initiative!
-It feels empowering to learn how AI is becoming a part of everyday life and how we all can be responsible users of this technology.</p>
-                <div class="badges">
-                    <h5 class="badge">AI</h5>
-                    <h5 class="badge">SOCIAL</h5>
-                </div>
                 <div class="links">
                     <h4>2025</h4>
                     <a href="assets/Achievments/Yahya Riswan_AI_AWARE_CERTIFICATE.png" target="_blank"  class="Live">View</a>
@@ -403,17 +413,14 @@ It feels empowering to learn how AI is becoming a part of everyday life and how 
             <div class="yip">
                 <img src="assets/Achievments/yip%206.0.jpg" alt="">
                 <h3>YIP 6.0 District Winner</h3>
-                <p>I Have Selected To State level Competition In YiP 6.0 For a Ai Power Smart Sunglasses For Visually Impared</p>
-                <div class="badges">
-                    <h5 class="badge">AI</h5>
-                    <h5 class="badge">SOCIAL</h5>
-                </div>
                 <div class="links">
                     <h4>2025</h4>
                     <a href="assets/Achievments/yip%206.0.jpg" target="_blank"  class="Live">View</a>
                 </div>
             </div>
         </div>
+        <div id="show"><h3>Show More</h3></div>
+
     </main>
     <main class="connect_main">
         <div class="left">
