--- a/index.html
+++ b/index.html
@@ -146,64 +146,20 @@
         <img src="./" alt="">
         <h2>My ShowCase</h2>
         <div class="container">
-            <div class="p timer">
-                <img src="assets/projects/promodoro timer.png" alt="">
-                <h3>Promodoro Timer</h3>
-                <p> Pomodoro Timer to help users focus with a 25-minute countdown</p>
+            <div class="todos-react">
+                <img src="assets/projects/todo-react.png" alt="">
+                <h3>Todos - React</h3>
+                <p>A simple Todo App With React & Redux Toolkit That Stores Data In Local Storage</p>
                 <div class="badges">
+                    <h5 class="badge">React</h5>
+                    <h5 class="badge">Redux</h5>
                     <h5 class="badge">HTML5</h5>
                     <h5 class="badge">CSS3</h5>
                     <h5 class="badge">JAVASCRIPT</h5>
-                    <h5 class="badge">RESPONSIVE</h5>
                 </div>
                 <div class="links">
-                    <a href="https://github.com/Yahya-Riswan/promodoro-timer" target="_blank" class="github">Github</a>
-                    <a href="Projects/Pomodoro Timer/" target="_blank"  class="Live">Live View</a>
-                </div>
-            </div>
-            <div class="age Calculator">
-                <img src="assets/projects/age calculator.png" alt="">
-                <h3>Age Calculator</h3>
-                <p>A Simple Age Calculator For Fun...</p>
-                <div class="badges">
-                    <h5 class="badge">HTML5</h5>
-                    <h5 class="badge">CSS3</h5>
-                    <h5 class="badge">JAVASCRIPT</h5>
-                    <h5 class="badge">RESPONSIVE</h5>
-                </div>
-                <div class="links">
-                    <a href="https://github.com/Yahya-Riswan/age_calculator" target="_blank" class="github">Github</a>
-                    <a href="Projects/Age Calculator/" target="_blank"  class="Live">Live View</a>
-                </div>
-            </div>
-             <div class="Number game">
-                <img src="assets/projects/numberguessgame.png" alt="">
-                <h3>Number Guess Game</h3>
-                <p>A Game with Dice with Playing with Computer And Player. Try It..</p>
-                <div class="badges">
-                    <h5 class="badge">HTML5</h5>
-                    <h5 class="badge">CSS3</h5>
-                    <h5 class="badge">JAVASCRIPT</h5>
-                    <h5 class="badge">GAME</h5>
-                </div>
-                <div class="links">
-                    <a href="https://github.com/Yahya-Riswan/Number-Guess-Game" target="_blank" class="github">Github</a>
-                    <a href="Projects/Number Guesing Game/" target="_blank"  class="Live">Live View</a>
-                </div>
-            </div>
-            <div class="password Generator">
-                <img src="assets/projects/password generator.png" alt="">
-                <h3>Password Generator</h3>
-                <p>A Simple App For Generating Password in Choose of Alphabets,Numbers & Special Characters.</p>
-                <div class="badges">
-                    <h5 class="badge">HTML5</h5>
-                    <h5 class="badge">CSS3</h5>
-                    <h5 class="badge">JAVASCRIPT</h5>
-                    <h5 class="badge">RESPONSIVE</h5>
-                </div>
-                <div class="links">
-                    <a href="https://github.com/Yahya-Riswan/Password-Generator" target="_blank" class="github">Github</a>
-                    <a href="Projects/Password Generator/" target="_blank"  class="Live">Live View</a>
+                    <a href="https://github.com/Yahya-Riswan/todos-do-some-tasks" target="_blank" class="github">Github</a>
+                    <a href="https://todos-do.web.app" target="_blank"  class="Live">Live View</a>
                 </div>
             </div>
             <div class="ios calculator">
@@ -237,34 +193,8 @@
                     <a href="Projects/Weather/" target="_blank"  class="Live">Live View</a>
                 </div>
             </div>
-            <div class="todo">
-                <img src="assets/projects/todo.png" alt="">
-                <h3>ToDo App</h3>
-                <p>A simple Todo App That Stores Data In Local Storage</p>
-                <div class="badges">
-                    <h5 class="badge">HTML5</h5>
-                    <h5 class="badge">CSS3</h5>
-                    <h5 class="badge">JAVASCRIPT</h5>
-                    <h5 class="badge">RESPONSIVE</h5>
-                </div>
-                <div class="links">
-                    <a href="https://github.com/Yahya-Riswan/todo_localstorage" target="_blank" class="github">Github</a>
-                    <a href="Projects/Todo/index.html" target="_blank"  class="Live">Live View</a>
-                </div>
-            </div>
-            <div class="goibibo">
-                <img src="assets/projects/goibibo.png" alt="">
-                <h3>Goibibo Clone</h3>
-                <p>A simple Clone Of Goibibo Without any Functions or Intractions Only Front Page</p>
-                <div class="badges">
-                    <h5 class="badge">HTML5</h5>
-                    <h5 class="badge">CSS3</h5>
-                </div>
-                <div class="links">
-                    <a href="https://github.com/Yahya-Riswan/Goibibo-Clone" target="_blank"  class="github">Github</a>
-                    <a href="Projects/Goibibo%20Clone/index.html" target="_blank"  class="Live">Live View</a>
-                </div>
-            </div>
+            
+            
             <div class="elonmusk">
                 <img src="assets/projects/elonmusk.png" alt="">
                 <h3>Elon Musk</h3>
